Fixed #4018 - [FF2] No richcombo text visible.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@3955 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/richcombo.css
+++ b/_source/skins/kama/richcombo.css
@@ -237,11 +237,6 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	float: left;
 }
 
-.cke_skin_kama .cke_browser_gecko18 .cke_rcombo
-{
-	display: -moz-box;
-}
-
 .cke_skin_kama .cke_browser_gecko .cke_rtl .cke_rcombo .cke_label,
 .cke_skin_kama .cke_browser_gecko .cke_rtl .cke_rcombo .cke_text,
 .cke_skin_kama .cke_browser_gecko .cke_rtl .cke_rcombo .cke_openbutton,
